Bug 626259.  Use the right statvfs fields for determining disk size.  r=josh, a=blocker