xpcom/io/nsLocalFileUnix.h
@@ -71,6 +71,10 @@
     #include <sys/statfs.h>
 #endif
 
+#if defined(XP_MACOSX) && (defined(HAVE_STATVFS64) || !defined(HAVE_STATVFS))
+#error "Double-check which members of the 'STATFS' struct we're using!"
+#endif
+
 #ifdef HAVE_STATVFS64
     #define STATFS statvfs64
 #else
